# greenlit

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/greenlit/: __init__.py  __main__.py  cli.py  display.py  formatters.py  init_cmd.py  sections.py  templates.py
src/greenlit/guidance/: __init__.py  action.py  debug.py  plan.py  research.py  review.py
src/greenlit/skills/: skill.md
tests/: test_cli_integration.py  test_display.py  test_formatters.py  test_init_cmd.py  test_sections.py  test_templates.py
