[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greenlit"
version = "0.1.0"
description = "A CLI walkthrough that guides you through nine prompt sections with task-specific guidance at every step."
readme = "README.md"
license = "MIT"
authors = [{name = "Abdullah Ali"}]
keywords = ["prompt", "cli", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = ["rich>=13.0"]

[project.optional-dependencies]
templates = ["pyyaml>=6.0"]

[project.scripts]
greenlit = "greenlit.cli:main"

[project.urls]
Repository = "https://github.com/abali2509/greenlit"

[tool.hatch.build.targets.wheel]
packages = ["src/greenlit"]


[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "ruff>=0.15.9",
]
